update to /cleaned

--- a/Sample&Gather.ipynb
+++ b/Sample&Gather.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import os \n",
-    "os.chdir('/Users/Alok/Downloads')"
+    "os.chdir('/Users/Alok/Downloads/cleaned')"
    ]
   },
   {
