deleted some stuff

--- a/Sample&Gather.ipynb
+++ b/Sample&Gather.ipynb
@@ -8,8 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import os \n",
-    "os.chdir('/Users/Alok/Downloads/cleaned')"
+    "import os \n"
    ]
   },
   {
